force-app/main/default/objects/Billing_Account_Staging__c/Billing_Account_Staging__c.object-meta.xml
<CustomObject>
    <label>Billing Account Staging</label>
    <nameField>
        <label>Billing Account Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Accounts Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>