force-app/main/default/objects/Billing_Account_Staging__c/fields/ACN__c.field-meta.xml
<CustomField>
    <fullName>ACN__c</fullName>
    <label>ACN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>