force-app/main/default/objects/Billing_Account_Staging__c/fields/Customer_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_2__c</fullName>
    <label>Customer Name 2</label>
    <length>120</length>
    <type>Text</type>
</CustomField>